<resources>
    <string name="app_name">MadLevel7Task2</string>
    <string name="action_settings">Settings</string>
    <string name="quest_fragment_label">Quest Fragment</string>

    <string name="quest_title">Welcome to the HvA Locations Quest</string>
    <string name="quest_description">After pressing start you will start the quest. After each question a picture of a HvA building is shown. Go to the building and start the next question. At the end there will be a prize waiting for you!</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="start_quest">Start quest</string>
    <string name="question_title">Who is the co-founder of Android?</string>
    <string name="question_position">%1$s/%2$s</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="wrong_answer">Wrong Answer</string>
</resources>